--- a/packages/swarm-styles/lib/reset/text.css
+++ b/packages/swarm-styles/lib/reset/text.css
@@ -46,7 +46,7 @@ pre,
 
 .runningText p {
     @extend %wrapNice;
-    margin-bottom: var(--size-space-default);
+    margin-bottom: var(--space);
     max-width: 40em;
 
 }
