--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -187,7 +187,7 @@
 }
 
 [data-swarm-button="reset"] {
-  padding: var(--size-space-quarter);
+  padding: var(--space-quarter);
   font-weight: var(--font-weight-normal);
 }
 
