--- a/packages/swarm-styles/lib/components/numericalInput.css
+++ b/packages/swarm-styles/lib/components/numericalInput.css
@@ -3,7 +3,7 @@
     border: 1px solid var(--color-gray-5);
     background-color: var(--color-white);
     border-radius: 4px;
-    padding: var(--size-space-default);
+    padding: var(--space);
     color: var(--color-gray-7);
     align-items: center;
     width: 100%;
