--- a/packages/swarm-styles/lib/components/textInput.css
+++ b/packages/swarm-styles/lib/components/textInput.css
@@ -12,12 +12,12 @@
 }
 
 [data-swarm-text-input-wrapper="default"] [data-swarm-text-input] {
-    padding: var(--size-space-default);
+    padding: var(--space);
 }
 
 [data-swarm-text-input-wrapper="icon"] [data-swarm-text-input] {
-    padding: var(--size-space-default);
-    padding-left: var(--size-space-double);
+    padding: var(--space);
+    padding-left: var(--space-double);
 }
 
 [data-swarm-text-input]:hover {
@@ -50,7 +50,7 @@
     bottom: 0;
     display: flex !important;
     left: 0;
-    padding: var(--size-space-default) var(--size-space-half);
-    position:absolute;
+    padding: var(--space) var(--space-half);
+    position: absolute;
     top:0;
 }
