fix: update padding and lineheight of textinput

--- a/packages/swarm-styles/lib/components/textInput.css
+++ b/packages/swarm-styles/lib/components/textInput.css
@@ -11,12 +11,12 @@
     box-sizing: border-box;
 }
 
-[data-swarm-text-input-wrapper="default"] [data-swarm-text-input] {
-    padding: var(--space);
+[data-swarm-text-input-wrapper] [data-swarm-text-input] {
+    padding: var(--space-half) var(--space);
+    line-height: 26px;
 }
 
 [data-swarm-text-input-wrapper="icon"] [data-swarm-text-input] {
-    padding: var(--space);
     padding-left: var(--space-double);
 }
 
