--- a/packages/swarm-styles/lib/main.css
+++ b/packages/swarm-styles/lib/main.css
@@ -1,5 +1,6 @@
 @import '@meetup/swarm-constants/build/css/variables.css';
 @import '@meetup/swarm-constants/build/css/colorModifiers.css';
+@import '@reach/menu-button/styles.css';
 @import './components/button.css';
 @import './components/linkButton.css'; /* extends button.css */
 @import './components/checkbox.css';
