fix: updated and added MenuLink to demo

--- a/packages/swarm-styles/lib/components/dropdown.css
+++ b/packages/swarm-styles/lib/components/dropdown.css
@@ -2,7 +2,8 @@
   color: var(--color-gray-7);
 }
 
-[data-swarm-menu-item][data-selected] {
+[data-swarm-menu-item][data-selected],
+[data-swarm-menu-link][data-selected] {
   background-color: var(--color-gray-3);
   color: var(--color-gray-7);
 }
