style: only override primary button icon colors"

--- a/packages/swarm-styles/lib/overrides.css
+++ b/packages/swarm-styles/lib/overrides.css
@@ -24,6 +24,11 @@
   color: var(--color-alert-red);
 }
 
+/* override fill from v1 with specific button colors */
+[data-swarm-button="primary"] .svg-icon {
+  fill: inherit;
+}
+
 /* override link colors */
 .link,
 a.link,
