--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -34,6 +34,7 @@
 %swarm-button-default-focus {
   background-color: var(--color-viridian);
   color: var(--color-white);
+  fill: var(--color-white);
   border: 1px solid var(--color-indigo);
 }
 
