--- a/packages/swarm-styles/lib/main.css
+++ b/packages/swarm-styles/lib/main.css
@@ -5,6 +5,7 @@
 @import './components/dropdown.css';
 @import './components/linkButton.css'; /* extends button.css */
 @import './components/checkbox.css';
+@import './components/icons.css';
 @import './components/numericalInput.css';
 @import './components/radio.css';
 @import './components/field.css';
