feat: migrating button to use new icon set, icons updated in docs

--- a/packages/swarm-styles/lib/components/dropdown.css
+++ b/packages/swarm-styles/lib/components/dropdown.css
@@ -1,5 +1,7 @@
 [data-swarm-menu-item] {
   color: var(--color-gray-7);
+  display: flex;
+  align-items: center;
 }
 
 [data-swarm-menu-item][data-selected],
