--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -206,11 +206,16 @@
 }
 
 /* with icon */
+[data-swarm-button] [data-swarm-icon] {
+  fill: inherit;
+}
+
 %swarm-button-icon-left {
   margin-right:  var(--space-half);
 }
 
-[data-swarm-button][data-icon="left"] > span > .svg-icon {
+[data-swarm-button][data-icon="left"] > span > .svg-icon,
+[data-swarm-button][data-icon="left"] > span > [data-swarm-icon] {
   @extend %swarm-button-icon-left;
 }
 
@@ -218,7 +223,8 @@
   margin-left:  var(--space-half);
 }
 
-[data-swarm-button][data-icon="right"] > span > .svg-icon {
+[data-swarm-button][data-icon="right"] > span > .svg-icon,
+[data-swarm-button][data-icon="right"] > span > [data-swarm-icon] {
   @extend %swarm-button-icon-right;
 }
 
