--- a/packages/swarm-styles/lib/components/textInput.css
+++ b/packages/swarm-styles/lib/components/textInput.css
@@ -46,11 +46,11 @@
 
 /** Icon sytles */
 [data-swarm-input-icon] {
-    align-content: center;
+    align-items: center;
     bottom: 0;
     display: flex !important;
     left: 0;
-    padding: var(--space) var(--space-half);
+    padding: var(--space-half);
     position: absolute;
     top:0;
 }
