--- a/packages/swarm-styles/lib/components/shared.css
+++ b/packages/swarm-styles/lib/components/shared.css
@@ -1,3 +1,8 @@
 [data-swarm-width="grow"] {
     width: 100%;
 }
+
+[data-swarm-width="normal"] {
+    padding-left: var(--space-triple);
+    padding-right: var(--space-triple);
+}
