feat: space and half added to large buton

--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -207,6 +207,7 @@
 %swarm-button-large {
   font-size: var(--font-size-normal);
   line-height: 28px;
+  padding: var(--space-half) var(--space-and-half);
 }
 
 [data-swarm-button][data-swarm-size="large"] {
