fix: exposing zIndex to menu container from style prop

--- a/packages/swarm-styles/lib/components/dropdown.css
+++ b/packages/swarm-styles/lib/components/dropdown.css
@@ -5,6 +5,10 @@
   display: flex;
 }
 
+[data-swarm-menu-item]:focus {
+  outline: none;
+}
+
 [data-swarm-menu-item] svg {
   margin-right: var(--space-half);
 }
