--- a/packages/swarm-styles/lib/components/toast.css
+++ b/packages/swarm-styles/lib/components/toast.css
@@ -1,32 +1,44 @@
 [data-swarm-toaster] {
   width: 100%;
   position: fixed;
-  padding: var(--space);
+  padding: var(--space-half);
   top: 0;
   right: 0;
   display: flex;
-  max-width: 500px;
+  max-width: 375px;
   height: 0;
   flex-direction: column;
   align-items: flex-end;
 }
 
 [data-swarm-toast] {
-  padding: var(--space);
-  margin: var(--space);
-  color: var(--color-white);
+  box-shadow: 0px 0px  12px 0px var(--color-gray-2);
+  background: var(--color-white);
+  padding: var(--space-half);
+  margin: var(--space) 0;
+  color: var(--color-gray-7);
   display: flex;
+  box-sizing: border-box;
+  width: 100%;
+  justify-content: space-between;
+}
+
+[data-swarm-toast-content] {
   width: 100%;
 }
 
 [data-swarm-toast="default"] {
-  background: var(--color-viridian);
+  border-left: 5px solid var(--color-gray-5);
 }
 
 [data-swarm-toast="success"] {
-  background: var(--color-confirm-green);
+  border-left: 5px solid var(--color-confirm-green);
+}
+
+[data-swarm-toast="warning"] {
+  border-left: 5px solid var(--color-warning-orange);
 }
 
 [data-swarm-toast="error"] {
-  background: var(--color-warning-orange);
+  border-left: 5px solid var(--color-alert-red);
 }
