--- a/packages/swarm-styles/lib/components/toast.css
+++ b/packages/swarm-styles/lib/components/toast.css
@@ -12,7 +12,7 @@
 }
 
 [data-swarm-toast] {
-  box-shadow: 0px 0px  12px 0px var(--color-gray-2);
+  box-shadow: 0px 0px  12px 0px rgba(0, 0, 0, 0.08);
   background: var(--color-white);
   padding: var(--space-half);
   margin: var(--space) 0;
@@ -24,7 +24,8 @@
 }
 
 [data-swarm-toast-content] {
-  width: 100%;
+  width: calc(100% - var(--space-quarter));
+  padding-left: var(--space-quarter);
 }
 
 [data-swarm-toast="default"] {
