--- a/packages/swarm-styles/lib/spacing.css
+++ b/packages/swarm-styles/lib/spacing.css
@@ -1,20 +1,8 @@
 :root {
-    --space-quarter: var(--size-space-quarter);
-    --space-half: var(--size-space-half);
-    --space: var(--size-space-default);
-    --space-and-half: var(--size-space-and-half);
-    --space-double: var(--size-space-double);
-    --space-quadruple: var(--size-space-quadruple);
-}
-
-/* Medium breakpoint overrides */
-@media only screen and (min-width: 640px) {
-  :root {
-    --space-quarter: var(--size-space-large-quarter);
-    --space-half: var(--size-space-large-half);
-    --space: var(--size-space-large-default);
-    --space-and-half: var(--size-space-large-and-half);
-    --space-double: var(--size-space-large-double);
-    --space-quadruple: var(--size-space-large-quadruple);
-   }
+    --space-quarter: var(--size-space-1);
+    --space-half: var(--size-space-2);
+    --space: var(--size-space-4);
+    --space-and-half: var(--size-space-6);
+    --space-double: var(--size-space-8);
+    --space-quadruple: var(--size-space-16);
 }
