fix: underline for text--link added

--- a/packages/swarm-styles/lib/type.css
+++ b/packages/swarm-styles/lib/type.css
@@ -71,6 +71,10 @@
     color: var(--color-viridian);
 }
 
+.text--link:hover {
+    text-decoration: underline;
+}
+
 /* INVERTED */
 .inverted {
     color: var(--color-white);
