feat: add input type password [2268]

--- a/packages/swarm-styles/lib/components/textInput.css
+++ b/packages/swarm-styles/lib/components/textInput.css
@@ -54,3 +54,12 @@
     position: absolute;
     top:0;
 }
+
+[data-swarm-focusable] {
+    cursor: pointer;
+}
+
+[data-swarm-position-right] {
+    left: auto;
+    right: 0;
+}
